tests/baselines/reference/primitiveTypeAsInterfaceName.errors.txt
==== tests/cases/compiler/primitiveTypeAsInterfaceName.ts (2 errors) ====
    interface number {}
              ~~~~~~
!!! error TS1058: Interface name cannot be 'number'.
              ~~~~~~
!!! error TS2000: Duplicate identifier 'number'.